# zk_light_client

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: btc_light_client.rs  constants.rs  lib.rs  sha256_merkle.rs
lib/: Cargo.toml
lib/src/: lib.rs  proof.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/: groth16_test.rs  plonk_test.rs
tests/: Cargo.toml
tests/src/: lib.rs
